--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0 !important;
+  color: #cdd6f4 !important;
+}
+
+span, p, div {
+  color: #cdd6f4 !important;
 }
