refactor: change site from home rental to just rooms in a singular home to satisfy project requirements

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <li>
       <a>
         <strong>
-          <h2>Sandcat AG Home Rental</h2>
+          <h2>Sandcat AG Room Rental</h2>
         </strong>
       </a>
     </li>
