--- a/frontend/src/app/rent/rent.component.html
+++ b/frontend/src/app/rent/rent.component.html
@@ -1,4 +1,5 @@
-<h1>{{rentData.name}}</h1>
+<app-calendar *ngIf="showCalendar"/>
+<h1>{{ rentData.name }}</h1>
 <hr>
 <div class="grid">
   <div>
@@ -7,19 +8,22 @@
   <div>
     <h1>Information</h1>
 
-    <div *ngIf="rentData.is_rented">
-      <hr>
-      <p class="rented">This room is currently unavailable</p>
-    </div>
+    <hr>
+    <p>Description: {{ rentData.description }}</p>
 
     <hr>
-    <p>Description: {{rentData.description}}</p>
-
-    <hr>
-    <p>Price: {{rentData.price}}</p>
+    <p>Price: {{ rentData.price }}</p>
 
     <div class="grid">
-      <button type="button" class="outline" [class.secondary]="rentData.is_rented">Rent</button>
+      <button type="button" class="outline" [class.secondary]="isBooked()">
+        <strong style="display: flex; align-items: center; justify-content: space-between ">
+          Rent
+          <svg xmlns="http://www.w3.org/2000/svg" height="32" width="28" viewBox="0 0 448 512">
+            <path
+              d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192h80v56H48V192zm0 104h80v64H48V296zm128 0h96v64H176V296zm144 0h80v64H320V296zm80-48H320V192h80v56zm0 160v40c0 8.8-7.2 16-16 16H320V408h80zm-128 0v56H176V408h96zm-144 0v56H64c-8.8 0-16-7.2-16-16V408h80zM272 248H176V192h96v56z"/>
+          </svg>
+        </strong>
+      </button>
     </div>
   </div>
 </div>
