--- a/frontend/src/app/calendar/calendar.component.scss
+++ b/frontend/src/app/calendar/calendar.component.scss
@@ -31,6 +31,10 @@
     }
   }
 
+  .date-selected {
+    background-color: #585b70 !important;
+  }
+
   .date-other-month {
     span {
       font-family: "JetBrainsMono NF ExtraLight", monospace !important;
