--- a/frontend/src/app/calendar/calendar.component.scss
+++ b/frontend/src/app/calendar/calendar.component.scss
@@ -1,6 +1,7 @@
 .calendar {
+  overflow-y: scroll;
   z-index: 100;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
   left: 0;
