feat: implement api calls into frontend

--- a/frontend/src/app/calendar/calendar.component.html
+++ b/frontend/src/app/calendar/calendar.component.html
@@ -84,7 +84,7 @@
       </table>
       </body>
       <footer>
-        <button (click)="makePayment(amountOfDays*100)">Book</button>
+        <button (click)="handleBook()">Book</button>
       </footer>
     </article>
   </div>
