--- a/frontend/src/app/calendar/calendar.component.scss
+++ b/frontend/src/app/calendar/calendar.component.scss
@@ -43,12 +43,13 @@
   }
 
   .date-available {
-    span {
-      color: #a8f38b !important;
+    &:hover {
+      cursor: pointer;
+    }
 
-      &:hover {
-        cursor: pointer;
-      }
+    span {
+      width: 100%;
+      color: #a8f38b !important;
     }
   }
 
@@ -60,9 +61,5 @@
     span {
       font-family: "JetBrainsMono NF ExtraLight", monospace !important;
     }
-  }
-
-  td.date-today {
-    border: 2px solid #cba6f7 !important;
   }
 }
