feat: initial about page

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,1 +1,30 @@
-<p>about works!</p>
+<div class="container">
+  <h1>About Us</h1>
+  <p>Welcome to Sandcat AG Room Rental, where comfort meets convenience! Our mission is to provide you with a homey and
+    memorable experience during your stay in our carefully curated living spaces.</p>
+
+  <p>At Sandcat AG Room Rental, we take pride in offering <span class="highlight">impeccably clean</span> rooms that are
+    thoughtfully designed to meet all your needs. Each room is maintained to the highest standards of cleanliness,
+    ensuring a hygienic and comfortable environment for our guests.</p>
+
+  <p>Experience the joy of staying in a space that feels like home, where attention to detail and guest satisfaction are
+    our top priorities. Whether you are a traveler exploring new places or a professional on a work assignment, our
+    rooms provide the perfect retreat.</p>
+
+  <p>But Sandcat AG Room Rental is not just about comfortable rooms; it's about creating a holistic experience. Located
+    in the
+    heart of a vibrant neighborhood, you'll find <span class="highlight">plenty of great places to visit</span> just a
+    stone's throw away. From charming cafes and restaurants to cultural landmarks and scenic parks, our location offers
+    a myriad of options for exploration and relaxation.</p>
+
+  <p>Choose Sandcat AG Room Rental for your next stay and discover the perfect blend of comfort, cleanliness, and
+    convenience.
+    We look forward to making your visit an incredible experience!</p>
+
+  <h3>Location</h3>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1379.4894760851462!2d9.578295716389064!3d46.445770642075374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47848841d54083ad%3A0xc5b62e8c0a36d4ea!2s7448%20Juf!5e1!3m2!1sen!2sch!4v1703243863789!5m2!1sen!2sch"
+    width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
