feat: user can now view their bookings

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,6 +13,9 @@
       <a routerLink="/home">Home</a>
     </li>
     <li>
+      <a routerLink="/bookings">Bookings</a>
+    </li>
+    <li>
       <a routerLink="/about">About</a>
     </li>
     <li>
