feat: lots of text and images

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,6 +16,9 @@
       <a routerLink="/bookings">Bookings</a>
     </li>
     <li>
+      <a routerLink="/activities">Activities</a>
+    </li>
+    <li>
       <a routerLink="/about">About</a>
     </li>
     <li>
