--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -15,3 +15,7 @@ input[type="text"], input[type="password"] {
   color: #eba0ac !important;
   font-family: "JetBrainsMono NF", monospace;
 }
+
+span.highlight {
+  color: #eba0ac !important;
+}
