--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -27,4 +27,47 @@
     width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
     referrerpolicy="no-referrer-when-downgrade">
   </iframe>
+
+  <h1>Your Data</h1>
+  <h3>What we <span class="highlight">do</span> store:</h3>
+  <p>This is an <span class="highlight"> inclusive</span> list. Anything not listed is <span
+    class="highlight">not</span> stored.</p>
+  <strong>Account</strong>
+  <ul>
+    <li>Username</li>
+    <li>Hashed Password</li>
+  </ul>
+  <strong>Bookings</strong>
+  <ul>
+    <li>What room you booked</li>
+    <li>Start date</li>
+    <li>End date</li>
+    <li>Stripe payment token (does <span class="highlight">not</span> contain any sensitive information)</li>
+    <li>Payment amount</li>
+  </ul>
+  <strong>Booking extras if you selected them</strong>
+  <ul>
+    <li>Bedsheets</li>
+    <li>Towels</li>
+    <li>Cleaning</li>
+    <li>Breakfast</li>
+    <li>Lunch</li>
+    <li>Dinner</li>
+    <li>Parking</li>
+    <li>Wifi</li>
+    <li>Safe</li>
+  </ul>
+
+  <h3>Stripe</h3>
+  <p>
+    The Stripe payment processing service is used and has its own privacy policy. You can find it <a
+    href="https://stripe.com/en-ch/privacy" target="_blank">here</a>.
+  </p>
+
+  <h1>Image Sources</h1>
+  <ul>
+    <li *ngFor="let img_src of image_sources">
+      <a href="{{img_src.url}}" target="_blank">{{ img_src.text }}</a>
+    </li>
+  </ul>
 </div>
